# automatic-resume-creator

./: .gitignore  LEARNING.MD  README.md  TODOS.md  main.py  pyproject.toml
api/: chatgpt.py  gemini.py
data/: skills.py
src/: resume-generator.py
utils/: curriculum.py  extract_keywords_from_job_description.py  find_jobs_from_linkedin.py  job_description.py  job_pipeline.py  job_post.py
