[project]
name = "automatic-resume"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "google-genai>=1.57.0",
    "markdownify>=1.2.2",
    "openai>=1.99.5",
    "playwright>=1.58.0",
    "pypdf>=5.3.0",
    "python-dotenv>=1.2.1",
]
